       then the status for folders is always set to
       "normal" to speed things up a little. (Stefan)
- CHG: Added a timeout to the status cache. This
       is a workaround so that refreshing (pressing
       F5) isn't needed that much. (Stefan)
- CHG: if only the properties were modified then
       this is indicated by a "(P only)" in
       the status text in the commit dialog. (Stefan)

Version 0.15.2
- BUG: The "Check for updates" dialog could
       crash for unversioned items. (Stefan)
- BUG: Subversion got new statuses which I
       completely missed. (Stefan)
- BUG: in the changed dialog if an entry was selected
       but no menu entry chosen then the 
       OK button stayed disabled. (Stefan)
- BUG: It wasn't possible to add more than two files
       to the ignore list. (Stefan)
- ADD: New context menu in the "Check for updates"
       dialog: compare with working copy. (Stefan)

Version 0.15.1
- BUG: Making a copy didn't always work. Some 
       Pre-Commit-Hooks prevent too short
       log messages. (Stefan)
- BUG: Wrong error message was shown if the
       external diff viewer could not be
       started. (Stefan)
- ADD: In the "Check for updates" dialog two context
       menus for showing a diff and updating files
       and folders. (Stefan)
- ADD: The proxy-settings are saved even if they
       are disabled. That way you can enable/disable
       those settings without the need to always
       reenter the data. (Stefan)

Version 0.15
- BUG: right-dragging a single file/folder resulted
       in error message "cannot copy path ... into
       its own child ...". (Stefan)
- BUG: The log dialog could crash if not enough
       memory is available. (Stefan)
- ADD: Select the files you want to delete before
       importing a project. (Stefan)
- ADD: New command "ignore" to set the svn:ignore
       property for selected files. This addition also
       includes the necessary changes for other 