@@ -21,10 +21,10 @@
 #include "registry.h"
 #include "SVNStatus.h"
 
-extern	UINT				g_cRefThisDll;	// Reference count of this DLL.
-extern	HINSTANCE			g_hmodThisDll;	// Instance handle for this DLL
-extern	SVNFolderStatus		g_CachedStatus;	// status cache
-
+extern	UINT				g_cRefThisDll;			// Reference count of this DLL.
+extern	HINSTANCE			g_hmodThisDll;			// Instance handle for this DLL
+extern	SVNFolderStatus		g_CachedStatus;			// status cache for icon overlays
+extern	SVNFolderStatus		g_CachedStatusColumn;	// status cache for columns
 /**
  * Since we need an own COM-object for every different
  * Icon-Overlay implemented this enum defines which class
